Add author controller and DTO (#19)
1. AuthorDTO class added
2. Basic CRUD into AuthorController class implemented